# k4neo

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  k4neo.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: static.yaml  test.yml
benchmarks/: README.md  demo_kmer_sparse_matrix.py
documentation/: mkdocs.yaml
documentation/docs/: about.md  api.md  faq.md  index.md  input.md  installation.md  output.md  usage.md
k4neo/: __init__.py  command_line.py  configuration.py  deprecated.py  exceptions.py  setup_logging.py
k4neo/annotator/: __init__.py  annotator.py  reference_annotation.py
k4neo/database/: database.py  queries.py
k4neo/database2/: database.py  queries.py  validate.py
k4neo/database_sqlite/: database.py  queries.py  validate.py
k4neo/helper/: async_writer.py  helper.py
k4neo/index/: index.py  index2.py  index_loader.py  index_processor.py  kmer_index.py
k4neo/parser/: __init__.py  index_parser.py  parser.py
k4neo/pipeline/: __init__.py  config.yaml  k4neo_pipeline.py  query_pipeline.py
k4neo/pipeline/config/: config.yaml
k4neo/pipeline/examples/: all_bin_paths.txt
k4neo/pipeline/workflow/: Snakefile
k4neo/plotter/: plotter.py
k4neo/prepare/: prepare.py
k4neo/tests/integration_tests/: test_annotator_integration.py  test_database_setup.py  test_database_sqlite_setup.py  test_index_processor.py  test_parser_complete.py  test_pipeline.py  test_prepare.py  test_queries_sqlite_integration.py
k4neo/tests/resources/: example.fasta  example_seq_table.tsv  index_manifest.yaml  index_multi_manifest.yaml  quant_index_manifest.yaml
k4neo/tests/unit_tests/: test_annotator.py  test_database.py  test_database_sqlite.py  test_helper.py  test_kmer_interface.py  test_kmer_interface_2.py  test_parser.py  test_queries_sqlite.py
neokant/: command_line.py  configuration.py  exceptions.py
neokant/annotator/: annotator.py
neokant/database/: database.py  queries.py
neokant/index/: index.py
neokant/parser/: __init__.py  parser.py
neokant/pipeline/: Snakefile  query_pipeline.py
neokant/pipeline/config/: config.yaml
neokant/pipeline/workflow/: Snakefile
scripts/: configuration.yaml
tests/: test_k4neo.yaml  test_k4neo_database.yaml  test_k4neo_prepare.yaml  test_k4neo_quant.yaml  test_k4neo_seq_not_found.yaml
tests/resources/: index_manifest.yaml  index_metadata.db  index_metadata.sqlite3  quant_index_manifest.yaml
tests/resources/index/: gene.bf  index_mapping.txt  raptor.index  ref_meta.json  transcriptome.bf  transcriptome.jf
tests/resources/index_data/: study_annotation.tsv
tests/resources/queries/: test_genes.tsv  test_genes_full_tx_table.tsv  test_genes_to_junc.tsv  test_junction_k4neo_input.tsv  (+4 more)
(+324 files in other folders)
